--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Aplikacje internetowe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div></div>
+    <div></div>
 </body>
 </html>
