--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div></div>
-    <div></div>
+    <div id="container">
+        <div class="first">A</div>
+        <div class="second">B</div>
+        <div>C</div>
+    </div>
 </body>
 </html>
