--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div id="container">
-        <div class="first">A</div>
-        <div class="second">B</div>
+        <div>A</div>
+        <div>B</div>
         <div>C</div>
     </div>
 </body>
