--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div id="container">
-        <div>A</div>
-        <div>B</div>
-        <div>C</div>
+        <div></div>
+        <div></div>
+        <div></div>
     </div>
 </body>
 </html>
